tests/error-mixed-binder.m31.ref
File "./error-mixed-binder.m31", line 4, characters 11-39: Syntax error
  This lambda abstraction has a global annotation and a local annotation on f
